# cargo-merge

./: LICENSE  README.md
workspace/: Cargo.toml
workspace/src/: bundle.rs  lib.rs  main.rs  merge.rs  opts.rs
workspace/tests/: integration_tests.rs
workspace/tests_data/import_external_lib/: Cargo.toml  expected_output.rs
workspace/tests_data/import_external_lib/src/: main.rs
workspace/tests_data/lib_and_bin/: Cargo.toml  expected_output.rs
workspace/tests_data/lib_and_bin/src/: main.rs
workspace/tests_data/nested_crates/: Cargo.toml  expected_output.rs
workspace/tests_data/nested_crates/src/: main.rs
workspace/tests_data/simple_binary/: Cargo.toml  expected_output.rs  expected_output_silenced.rs
workspace/tests_data/simple_binary/src/: main.rs
workspace/tests_data/simple_lib/: Cargo.toml  expected_output.rs
workspace/tests_data/simple_lib/src/: call.rs  hello_world.rs  lib.rs
