[package]
name = "cargo-bundle"
version = "0.1.0"
authors = ["Julien Faixo <julien@faixo.me>"]
description = "Cargo sub command to bundle the source code of a crate into a single file."
license = "Apache-2.0"
homepage = "https://gitlab.com/jfaixo/cargo-bundle"
repository = "https://gitlab.com/jfaixo/cargo-bundle.git"

edition = "2018"

[dependencies]
structopt = "0.3.21"
serde_derive = "1.0.123"
serde = "1.0.123"
log = "0.4.14"
colored = "2.0.0"
simple-logging = "2.0"
toml = "0.5.8"
regex = "1.4.3"
