[package]
name = "cargo-merge"
version = "0.2.0"
authors = ["Julien Faixo <julien@faixo.me>"]
description = "A cargo subcommand to merge the source code of a crate into a single file."
license = "MIT"
homepage = "https://gitlab.com/jfaixo/cargo-merge"
documentation = "https://gitlab.com/jfaixo/cargo-merge"
repository = "https://gitlab.com/jfaixo/cargo-merge.git"
readme = "../README.md"
keywords = ["cargo", "merge", "competitive", "codingame"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

edition = "2018"

[dependencies]
structopt = "0.3.21"
serde_derive = "1.0.123"
serde = "1.0.123"
log = "0.4.14"
colored = "2.0.0"
simple-logging = "2.0"
toml = "0.5.8"
regex = "1.4.3"
